Add unit tests for CartCubit and ProductFormPage  - Implement tests for CartCubit to verify adding, incrementing, decrementing products, and calculating totals and discounts. - Create a test configuration for initializing Isar before running tests. - Add tests for ProductFormPage to validate form inputs and handle duplicate SKU scenarios.

--- a/apps/lib/l10n/app_en.arb
+++ b/apps/lib/l10n/app_en.arb
@@ -27,4 +27,90 @@
   "settingsShowSyncBanner": "Show sync banner"
   ,
   "settingsEnableBatchSync": "Enable batch sync"
+  ,
+  "settingsBatchSize": "Batch size"
+  ,
+  "aboutTitle": "About",
+  "aboutDbVersion": "DB version",
+  "aboutAppVersion": "App version",
+  "aboutLastSync": "Last sync"
+  ,
+  "aboutQaParams": "QA params",
+  "aboutCopied": "Copied",
+  "aboutResetLocalDb": "Reset local data",
+  "aboutResetLocalDbHint": "Long-press to reset",
+  "aboutConfirmTitle": "Confirm reset",
+  "aboutConfirmMessage": "This will delete local data. Continue?",
+  "cancel": "Cancel",
+  "ok": "OK",
+  "error": "Error",
+  "aboutResetDone": "Local data cleared",
+  "aboutTitle": "About",
+  "checkoutTitle": "Checkout",
+  "checkoutTotal": "Total",
+  "checkoutCash": "Cash",
+  "checkoutTransfer": "Transfer",
+  "checkoutAmountReceived": "Amount received (៛)",
+  "checkoutChangeDue": "Change due",
+  "checkoutRemaining": "Remaining",
+  "checkoutCompleteSale": "Complete Sale",
+  "saleCompletedChange": "Sale completed. Change: {amount}",
+  "saleCompletedRemaining": "Sale recorded. Remaining: {amount}"
+  ,
+  "receivePayment": "Receive Payment",
+  "balance": "Balance",
+  "saleDetailsTitle": "Sale Details",
+  "saleNotFound": "Sale not found",
+  "paid": "Paid"
+  ,
+  "settingsKhqrTitle": "Static KHQR",
+  "settingsUploadKhqr": "Upload KHQR PNG",
+  "settingsRemoveKhqr": "Remove KHQR",
+  "settingsKhqrNotSet": "No KHQR uploaded",
+  "checkoutTxReference": "Transfer reference (optional)",
+  "checkoutScanKhqr": "Ask customer to scan this KHQR",
+  "txRefLabel": "Ref: {ref}"
+  ,
+  "settingsLowStockThreshold": "Low stock threshold",
+  "adjustStockTitle": "Adjust Stock",
+  "stockLabel": "Stock",
+  "decrease": "Decrease",
+  "increase": "Increase",
+  "setStock": "Set Stock"
+  ,
+  "lowStock": "Low"
+  ,
+  "insufficientStock": "Insufficient stock",
+  "outOfStock": "Out of stock",
+  "notEnoughStockFor": "Not enough stock for {name}. Available: {qty}"
+  ,
+  "settingsAllowOversell": "Allow oversell (warn only)",
+  "exceedsStock": "Exceeds stock"
+  ,
+  "receipt": "Receipt",
+  "print": "Print",
+  "share": "Share",
+  "pairPrinter": "Pair Printer",
+  "printingStarted": "Printing...",
+  "printingDone": "Printed",
+  "printingFailed": "Printing failed",
+  "sharePdf": "Share PDF",
+  "printBluetooth": "Print (58mm Bluetooth)"
+  ,
+  "sendTelegram": "Send to Telegram",
+  "telegramNotConfigured": "Telegram is not configured"
+  ,
+  "discount": "Discount",
+  "voidSale": "Void/Cancel sale",
+  "offline": "Offline",
+  "allSynced": "All synced",
+  "errorGeneric": "Something went wrong. Please try again.",
+  "khqr": "KHQR",
+  
+  "scanDevices": "Scan devices",
+  "scanning": "Scanning...",
+  "noDevicesFound": "No devices found",
+  "tapToSelect": "Tap to select device",
+  "testPrint": "Test Print",
+  "unpair": "Unpair"
 }
