--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -25,4 +25,89 @@
   "settingsShowSyncBanner": "បង្ហាញបន្ទះសមកាលកម្ម"
   ,
   "settingsEnableBatchSync": "អនុញ្ញាតសមកាលកម្មជាក្បាល"
+  ,
+  "settingsBatchSize": "ទំហំក្បាល"
+  ,
+  "aboutTitle": "អំពីកម្មវិធី",
+  "aboutDbVersion": "កំណែនៃមូលដ្ឋានទិន្នន័យ",
+  "aboutAppVersion": "កំណែនៃកម្មវិធី",
+  "aboutLastSync": "សមកាលកម្មចុងក្រោយ"
+  ,
+  "aboutQaParams": "ប៉ារ៉ាម៉ែត្រ QA",
+  "aboutCopied": "បានចម្លង",
+  "aboutResetLocalDb": "សម្អាតទិន្នន័យមូលដ្ឋាន",
+  "aboutResetLocalDbHint": "ចុចសង្កត់ដើម្បីសម្អាត",
+  "aboutConfirmTitle": "បញ្ជាក់ទៅកាន់ការសម្អាត",
+  "aboutConfirmMessage": "នេះនឹងលុបទិន្នន័យក្នុងឧបករណ៍។ បន្តឬ?",
+  "cancel": "បោះបង់",
+  "ok": "យល់ព្រម",
+  "error": "កំហុស",
+  "aboutTitle": "អំពីកម្មវិធី",
+  "checkoutTitle": "គិតលុយ",
+  "checkoutTotal": "សរុប",
+  "checkoutCash": "សាច់ប្រាក់",
+  "checkoutTransfer": "ផ្ទេរលុយ",
+  "checkoutAmountReceived": "ប្រាក់បានទទួល (៛)",
+  "checkoutChangeDue": "ប្រាក់អាប់",
+  "checkoutRemaining": "ប្រាក់នៅខ្វះ",
+  "checkoutCompleteSale": "បញ្ចប់ការលក់",
+  "saleCompletedChange": "បានបញ្ចប់ការលក់។ ប្រាក់អាប់: {amount}",
+  "saleCompletedRemaining": "បានកត់ត្រាការលក់។ ប្រាក់នៅខ្វះ: {amount}"
+  ,
+  "receivePayment": "ទទួលការទូទាត់",
+  "balance": "សមតុល្យ",
+  "saleDetailsTitle": "ព័ត៌មានលម្អិតអំពីការលក់",
+  "saleNotFound": "រកមិនឃើញការលក់",
+  "paid": "បានទូទាត់"
+  ,
+  "settingsKhqrTitle": "KHQR ថេរ",
+  "settingsUploadKhqr": "ផ្ទុកឡើងរូបភាព KHQR",
+  "settingsRemoveKhqr": "លុប KHQR",
+  "settingsKhqrNotSet": "មិនទាន់មាន KHQR",
+  "checkoutTxReference": "លេខយោងផ្ទេរ (ស្រេចចិត្ត)",
+  "checkoutScanKhqr": "អញ្ជើញអតិថិជនស្កេន KHQR នេះ",
+  "txRefLabel": "លេខយោង: {ref}"
+  ,
+  "settingsLowStockThreshold": "កម្រិតស្តុកទាប",
+  "adjustStockTitle": "កែតម្រូវស្តុក",
+  "stockLabel": "ស្តុក",
+  "decrease": "បន្ថយ",
+  "increase": "បន្ថែម",
+  "setStock": "កំណត់ស្តុក"
+  ,
+  "lowStock": "ស្តុកតិច"
+  ,
+  "insufficientStock": "ស្តុកមិនគ្រប់គ្រាន់",
+  "outOfStock": "អស់ស្តុក",
+  "notEnoughStockFor": "ស្តុកមិនគ្រប់សម្រាប់ {name}។ នៅសល់: {qty}"
+  ,
+  "settingsAllowOversell": "អនុញ្ញាតលក់លើស (ព្រមានតែប៉ុណ្ណោះ)",
+  "exceedsStock": "លើសស្តុក"
+  ,
+  "receipt": "វិក្កយបត្រ",
+  "print": "បោះពុម្ព",
+  "share": "ចែករំលែក",
+  "pairPrinter": "ភ្ជាប់ម៉ាស៊ីនបោះពុម្ព",
+  "printingStarted": "កំពុងបោះពុម្ព...",
+  "printingDone": "បានបោះពុម្ព",
+  "printingFailed": "បោះពុម្ពបរាជ័យ",
+  "sharePdf": "ចែករំលែក PDF",
+  "printBluetooth": "បោះពុម្ព (ម៉ាស៊ីន 58mm)"
+  ,
+  "sendTelegram": "ផ្ញើទៅ Telegram",
+  "telegramNotConfigured": "មិនទាន់កំណត់ Telegram"
+  ,
+  "discount": "បញ្ចុះតម្លៃ",
+  "voidSale": "លុបបោះបង់",
+  "offline": "ក្រៅបណ្តាញ",
+  "allSynced": "បានសមកាលកម្ម",
+  "errorGeneric": "មានបញ្ហា សូមព្យាយាមម្ដងទៀត",
+  "khqr": "KHQR",
+  
+  "scanDevices": "ស្កេនឧបករណ៍",
+  "scanning": "កំពុងស្កេន...",
+  "noDevicesFound": "រកមិនឃើញឧបករណ៍",
+  "tapToSelect": "ចុចដើម្បីជ្រើសរើស",
+  "testPrint": "បោះពុម្ពសាកល្បង",
+  "unpair": "ផ្ដាច់ការភ្ជាប់"
 }
