Revamp sales screen experience

--- a/apps/lib/l10n/app_en.arb
+++ b/apps/lib/l10n/app_en.arb
@@ -21,6 +21,7 @@
   "undo": "UNDO",
   "noProducts": "No products",
   "noSales": "No sales",
+  "salesEmptyDescription": "Create a sale to start tracking payments.",
   "noPayments": "No payments",
   "lastSyncAt": "Last sync: {time}"
   ,
@@ -57,7 +58,16 @@
   "saleCompletedChange": "Sale completed. Change: {amount}",
   "saleCompletedRemaining": "Sale recorded. Remaining: {amount}"
   ,
+  "salesAppBarSubtitle": "Monitor customer payments and balances",
   "receivePayment": "Receive Payment",
+  "salesSummaryTotal": "Total sales",
+  "salesSummaryOutstanding": "Outstanding balance",
+  "salesSummaryCompleted": "Paid in full",
+  "salesCardTotal": "Sale total",
+  "salesStatusOutstanding": "Outstanding",
+  "salesViewDetails": "View details",
+  "salesDeleteTooltip": "Delete sale",
+  "salesNewSale": "New sale",
   "balance": "Balance",
   "saleDetailsTitle": "Sale Details",
   "saleNotFound": "Sale not found",
