--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -19,6 +19,7 @@
   "undo": "មិនធ្វើវិញ",
   "noProducts": "គ្មានផលិតផល",
   "noSales": "គ្មានការលក់",
+  "salesEmptyDescription": "បង្កើតការលក់ដើម្បីចាប់ផ្តើមតាមដានការទូទាត់។",
   "noPayments": "គ្មានការទូទាត់",
   "lastSyncAt": "សមកាលកម្មចុងក្រោយ: {time}"
   ,
@@ -54,7 +55,16 @@
   "saleCompletedChange": "បានបញ្ចប់ការលក់។ ប្រាក់អាប់: {amount}",
   "saleCompletedRemaining": "បានកត់ត្រាការលក់។ ប្រាក់នៅខ្វះ: {amount}"
   ,
+  "salesAppBarSubtitle": "តាមដានការទូទាត់ និងសមតុល្យអតិថិជន",
   "receivePayment": "ទទួលការទូទាត់",
+  "salesSummaryTotal": "ទឹកប្រាក់លក់សរុប",
+  "salesSummaryOutstanding": "ទឹកប្រាក់នៅសល់",
+  "salesSummaryCompleted": "បានទូទាត់ពេញលេញ",
+  "salesCardTotal": "តម្លៃការលក់",
+  "salesStatusOutstanding": "នៅខ្វះ",
+  "salesViewDetails": "មើលលម្អិត",
+  "salesDeleteTooltip": "លុបការលក់",
+  "salesNewSale": "ការលក់ថ្មី",
   "balance": "សមតុល្យ",
   "saleDetailsTitle": "ព័ត៌មានលម្អិតអំពីការលក់",
   "saleNotFound": "រកមិនឃើញការលក់",
