Refine inventory and customer UI styling

--- a/apps/lib/l10n/app_en.arb
+++ b/apps/lib/l10n/app_en.arb
@@ -1,10 +1,54 @@
 {
   "appTitle": "KH POS Lite",
-  "tabProducts": "Products",
-  "tabSales": "Sales",
-  "tabPayments": "Payments",
-  "tabReports": "Reports",
+  "tabItems": "Items",
+  "tabCustomers": "Customers",
+  "tabInvoices": "Invoices",
   "tabSettings": "Settings",
+  "itemsSearchHint": "Item Name",
+  "itemsEmptyTitle": "Item Not Found",
+  "itemsEmptySubtitle": "Item might be not in your list",
+  "itemsCreateButton": "Create New Item",
+  "itemsSkuOnlyFilter": "Search SKU only",
+  "itemsAdjustStockTooltip": "Adjust Stock",
+  "itemsCreateTooltip": "Create Item",
+  "itemsStockChip": "Stock: {count}",
+  "itemsFormTitleCreate": "Create Item",
+  "itemsFormTitleEdit": "Edit Item",
+  "itemsFormSectionBasicInfo": "Basic Info",
+  "itemsFormSectionNote": "Note",
+  "itemsFormSectionImage": "Image",
+  "itemsFieldName": "Item Name",
+  "itemsFieldCode": "Item Code",
+  "itemsFieldUnitCost": "Unit Cost (៛)",
+  "itemsFieldPrice": "Price (៛)",
+  "itemsFieldStock": "Stock",
+  "itemsFieldNoteHint": "Write your note",
+  "itemsAddImage": "Add Image",
+  "itemsPriceValidation": "Price must be greater than or equal to the unit cost",
+  "itemsSkuExists": "SKU already exists",
+  "itemsSkuFormat": "Use 3-32 characters: letters, digits, _ or -",
+  "customersSearchHint": "Name, Phone",
+  "customersEmptyTitle": "Customer Not Found",
+  "customersEmptySubtitle": "Customer might be not in your list",
+  "customersCreateButton": "Create New Customer",
+  "customersCreateTooltip": "Create Customer",
+  "customersFormTitleCreate": "Create Customer",
+  "customersFormTitleEdit": "Edit Customer",
+  "customersSectionBasicInfo": "Basic Info",
+  "customersSectionAddress": "Address",
+  "customersSectionNote": "Note",
+  "customersFieldFullName": "Full Name",
+  "customersFieldPhone": "Phone",
+  "customersFieldAltPhone": "Alternative Phone",
+  "customersFieldVatTin": "VAT TIN",
+  "customersFieldAddressHint": "Address",
+  "customersFieldNoteHint": "Write your note",
+  "customersVatLabel": "VAT",
+  "customersPrivacyHint": "We respect your customers' privacy and never share their details.",
+  "customersDeleted": "Customer deleted",
+  "commonDone": "Done",
+  "formRequired": "Required",
+  "formNonNegative": "Must be zero or greater",
   "loginTitle": "Sign in",
   "loginSignIn": "Sign in",
   "settingsLanguage": "Language",
