--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -1,10 +1,54 @@
 {
   "appTitle": "ខេអេច ភאָס លាយទ៍",
-  "tabProducts": "ផលិតផល",
-  "tabSales": "លក់",
-  "tabPayments": "ការទូទាត់",
-  "tabReports": "របាយការណ៍",
+  "tabItems": "ទំនិញ",
+  "tabCustomers": "អតិថិជន",
+  "tabInvoices": "វិក្កយបត្រ",
   "tabSettings": "ការកំណត់",
+  "itemsSearchHint": "ឈ្មោះទំនិញ",
+  "itemsEmptyTitle": "រកមិនឃើញទំនិញ",
+  "itemsEmptySubtitle": "ទំនិញអាចមិនមានក្នុងបញ្ជីរបស់អ្នក",
+  "itemsCreateButton": "បង្កើតទំនិញថ្មី",
+  "itemsSkuOnlyFilter": "ស្វែងរកតាម SKU ប៉ុណ្ណោះ",
+  "itemsAdjustStockTooltip": "កែតម្រូវស្តុក",
+  "itemsCreateTooltip": "បង្កើតទំនិញ",
+  "itemsStockChip": "ស្តុក: {count}",
+  "itemsFormTitleCreate": "បង្កើតទំនិញ",
+  "itemsFormTitleEdit": "កែប្រែទំនិញ",
+  "itemsFormSectionBasicInfo": "ព័ត៍មានមូលដ្ឋាន",
+  "itemsFormSectionNote": "កំណត់ចំណាំ",
+  "itemsFormSectionImage": "រូបភាព",
+  "itemsFieldName": "ឈ្មោះទំនិញ",
+  "itemsFieldCode": "កូដទំនិញ",
+  "itemsFieldUnitCost": "តម្លៃដើម (៛)",
+  "itemsFieldPrice": "តម្លៃលក់ (៛)",
+  "itemsFieldStock": "ស្តុក",
+  "itemsFieldNoteHint": "សរសេរកំណត់ចំណាំរបស់អ្នក",
+  "itemsAddImage": "បន្ថែមរូបភាព",
+  "itemsPriceValidation": "តម្លៃលក់ត្រូវតែធំជាងឬស្មើតម្លៃដើម",
+  "itemsSkuExists": "SKU នេះមានរួចហើយ",
+  "itemsSkuFormat": "ប្រើតួអក្សរ 3-32: អក្សរ លេខ _ ឬ -",
+  "customersSearchHint": "ឈ្មោះ, ទូរស័ព្ទ",
+  "customersEmptyTitle": "រកមិនឃើញអតិថិជន",
+  "customersEmptySubtitle": "អតិថិជនអាចមិនមានក្នុងបញ្ជីរបស់អ្នក",
+  "customersCreateButton": "បង្កើតអតិថិជនថ្មី",
+  "customersCreateTooltip": "បង្កើតអតិថិជន",
+  "customersFormTitleCreate": "បង្កើតអតិថិជន",
+  "customersFormTitleEdit": "កែប្រែអតិថិជន",
+  "customersSectionBasicInfo": "ព័ត៍មានមូលដ្ឋាន",
+  "customersSectionAddress": "អាសយដ្ឋាន",
+  "customersSectionNote": "កំណត់ចំណាំ",
+  "customersFieldFullName": "ឈ្មោះពេញ",
+  "customersFieldPhone": "ទូរស័ព្ទ",
+  "customersFieldAltPhone": "ទូរស័ព្ទបន្ថែម",
+  "customersFieldVatTin": "លេខ VAT",
+  "customersFieldAddressHint": "អាសយដ្ឋាន",
+  "customersFieldNoteHint": "សរសេរកំណត់ចំណាំរបស់អ្នក",
+  "customersVatLabel": "VAT",
+  "customersPrivacyHint": "យើងគោរពភាពឯកជនរបស់អតិថិជន ហើយមិនចែករំលែកទិន្នន័យរបស់ពួកគេទេ។",
+  "customersDeleted": "បានលុបអតិថិជន",
+  "commonDone": "រួចរាល់",
+  "formRequired": "ត្រូវការ",
+  "formNonNegative": "ត្រូវតែធំជាងឬស្មើសូន្យ",
   "loginTitle": "ចូលប្រើ",
   "loginSignIn": "ចូលប្រើ",
   "settingsLanguage": "ភាសា",
