Improve login and payments UX and fix initialization bugs

--- a/apps/lib/l10n/app_en.arb
+++ b/apps/lib/l10n/app_en.arb
@@ -51,6 +51,10 @@
   "formNonNegative": "Must be zero or greater",
   "loginTitle": "Sign in",
   "loginSignIn": "Sign in",
+  "loginSubtitle": "Track sales, print receipts, and sync automatically.",
+  "loginFeatureOffline": "Works offline and syncs when you're back online.",
+  "loginFeatureReceipts": "Print beautiful receipts or share invoices instantly.",
+  "loginFeatureKhqr": "Collect cashless payments with KHQR and Telegram alerts.",
   "settingsLanguage": "Language",
   "settingsLanguageKm": "Khmer",
   "settingsLanguageEn": "English",
@@ -67,6 +71,18 @@
   "noSales": "No sales",
   "salesEmptyDescription": "Create a sale to start tracking payments.",
   "noPayments": "No payments",
+  "paymentsTitle": "Payments",
+  "paymentsSubtitle": "Review collections across cash and transfer channels.",
+  "paymentsSummaryCollected": "Collected",
+  "paymentsSummaryCount": "Payments recorded",
+  "paymentsFilterAll": "All",
+  "paymentsFilterCash": "Cash",
+  "paymentsFilterTransfer": "Transfer",
+  "paymentsSearchHint": "Search by sale, method, or reference",
+  "paymentsEmptyDescription": "Add payments as you collect cash or receive transfers.",
+  "paymentsMethodLabel": "Payment method",
+  "paymentsFormSaleId": "Sale ID",
+  "paymentsFormSubmit": "Save payment",
   "lastSyncAt": "Last sync: {time}",
   "settingsShowSyncBanner": "Show sync banner",
   "settingsEnableBatchSync": "Enable batch sync",
