--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -51,6 +51,10 @@
   "formNonNegative": "ត្រូវតែធំជាងឬស្មើសូន្យ",
   "loginTitle": "ចូលប្រើ",
   "loginSignIn": "ចូលប្រើ",
+  "loginSubtitle": "តាមដានការលក់ បោះពុម្ពវិក្កយបត្រ និងសមកាលកម្មដោយស្វ័យប្រវត្តិ។",
+  "loginFeatureOffline": "ធ្វើការបានទោះនៅក្រៅបណ្តាញ ហើយសមកាលកម្មនៅពេលតភ្ជាប់ឡើងវិញ។",
+  "loginFeatureReceipts": "បោះពុម្ពវិក្កយបត្រមានសោភ័ណភាព ឬចែករំលែកវិក្កយបត្រតាមអ៊ីលេកត្រូនិកភ្លាមៗ។",
+  "loginFeatureKhqr": "ទទួលការទូទាត់គ្មានសាច់ប្រាក់ជាមួយ KHQR និងការជូនដំណឹង Telegram។",
   "settingsLanguage": "ភាសា",
   "settingsLanguageKm": "ខ្មែរ",
   "settingsLanguageEn": "អង់គ្លេស",
@@ -67,6 +71,18 @@
   "noSales": "គ្មានការលក់",
   "salesEmptyDescription": "បង្កើតការលក់ដើម្បីចាប់ផ្តើមតាមដានការទូទាត់។",
   "noPayments": "គ្មានការទូទាត់",
+  "paymentsTitle": "ការទូទាត់",
+  "paymentsSubtitle": "ពិនិត្យទឹកប្រាក់ដែលទទួលបានតាមសាច់ប្រាក់ និងផ្ទេរប្រាក់។",
+  "paymentsSummaryCollected": "ទឹកប្រាក់ដែលបានទទួល",
+  "paymentsSummaryCount": "ការទូទាត់ដែលបានកត់ត្រា",
+  "paymentsFilterAll": "ទាំងអស់",
+  "paymentsFilterCash": "សាច់ប្រាក់",
+  "paymentsFilterTransfer": "ផ្ទេរប្រាក់",
+  "paymentsSearchHint": "ស្វែងរកតាមការលក់ វិធីទូទាត់ ឬលេខយោង",
+  "paymentsEmptyDescription": "បន្ថែមការទូទាត់នៅពេលទទួលសាច់ប្រាក់ ឬទទួលការផ្ទេរប្រាក់។",
+  "paymentsMethodLabel": "វិធីទូទាត់",
+  "paymentsFormSaleId": "លេខកូដការលក់",
+  "paymentsFormSubmit": "រក្សាទុកការទូទាត់",
   "lastSyncAt": "សមកាលកម្មចុងក្រោយ: {time}",
   "settingsShowSyncBanner": "បង្ហាញបន្ទះសមកាលកម្ម",
   "settingsEnableBatchSync": "អនុញ្ញាតសមកាលកម្មជាក្បាល",
