--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -3,6 +3,7 @@
   "tabItems": "ទំនិញ",
   "tabCustomers": "អតិថិជន",
   "tabInvoices": "វិក្កយបត្រ",
+  "tabSales": "ការលក់",
   "tabSettings": "ការកំណត់",
   "itemsSearchHint": "ឈ្មោះទំនិញ",
   "itemsEmptyTitle": "រកមិនឃើញទំនិញ",
