chore: run flutter analyze + dart fix; M3 polish and cleanup unused widgets/imports

--- a/apps/lib/l10n/app_en.arb
+++ b/apps/lib/l10n/app_en.arb
@@ -1,5 +1,12 @@
 {
   "appTitle": "KH POS Lite",
+  "loginSubtitle": "Sign in to continue",
+  "loginEmailLabel": "Email or username",
+  "loginPasswordLabel": "Password",
+  "loginSignIn": "Sign in",
+  "fieldRequired": "This field is required",
+  "show": "Show",
+  "hide": "Hide",
   "tabItems": "Items",
   "tabCustomers": "Customers",
   "tabInvoices": "Invoices",
