--- a/apps/lib/l10n/app_km.arb
+++ b/apps/lib/l10n/app_km.arb
@@ -53,6 +53,11 @@
   "loginTitle": "ចូលប្រើ",
   "loginSignIn": "ចូលប្រើ",
   "loginSubtitle": "តាមដានការលក់ បោះពុម្ពវិក្កយបត្រ និងសមកាលកម្មដោយស្វ័យប្រវត្តិ។",
+  "loginEmailLabel": "អ៊ីមែល ឬឈ្មោះអ្នកប្រើ",
+  "loginPasswordLabel": "ពាក្យសម្ងាត់",
+  "fieldRequired": "ត្រូវការបំពេញ",
+  "show": "បង្ហាញ",
+  "hide": "លាក់",
   "loginFeatureOffline": "ធ្វើការបានទោះនៅក្រៅបណ្តាញ ហើយសមកាលកម្មនៅពេលតភ្ជាប់ឡើងវិញ។",
   "loginFeatureReceipts": "បោះពុម្ពវិក្កយបត្រមានសោភ័ណភាព ឬចែករំលែកវិក្កយបត្រតាមអ៊ីលេកត្រូនិកភ្លាមៗ។",
   "loginFeatureKhqr": "ទទួលការទូទាត់គ្មានសាច់ប្រាក់ជាមួយ KHQR និងការជូនដំណឹង Telegram។",
